tests/warn/parsing-quote.jo
def foo =
  val a = "hello   // error

  val b = 3 + 5

  abc"             // error

  val c = 23 + 98

  defd"            // error

  "some \{5
          + 7}

  "jo \{3
          - 2}"

  "lang \{4
          * 5} text"

def bar(x: Int) = x * x
